Liste kann jetzt Daten binden

--- a/FMAApp/MainWindow.xaml
+++ b/FMAApp/MainWindow.xaml
@@ -35,7 +35,8 @@
             <Label Content="Rezepte" Grid.Row="0" Grid.Column="0" FontSize="32" HorizontalAlignment="Center" Foreground="#161B25" />
         </Border>
 
-        <ListBox Grid.Column="1" Grid.Row="1" Grid.RowSpan="9" BorderBrush="#BABFD7" BorderThickness="2">
+        <ListBox Name="RezeptCollection" Grid.Column="1" ItemsSource="{Binding Path=rezepte}" DisplayMemberPath="name"
+                 Grid.Row="1" Grid.RowSpan="9" BorderBrush="#BABFD7" BorderThickness="2">
 
         </ListBox>
 
