--- a/FMAApp/AllWindows/RecipeCreationWindow.xaml
+++ b/FMAApp/AllWindows/RecipeCreationWindow.xaml
@@ -31,9 +31,15 @@
         
         <Label Grid.Column="1" Grid.Row="0" FontSize="38" Content="Rezept" 
                HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        
+
         <ListBox Grid.Row="1" Grid.Column="1" BorderBrush="#BABFD7" 
-                 BorderThickness="2" Grid.RowSpan="8"/>
+                 BorderThickness="2" Grid.RowSpan="8" ItemsSource="{Binding Path=rezepte[0].neuesRezept}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ingredient}" FontSize="28"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         
         <Button Name="NeueZutatBtn" Content="Neue Zutat" FontSize="28" 
                 Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="3" Click="NeueZutatBtn_Click">
