Speichern der Rezepte als Datei jetzt Möglich Löschen einzelner Zutaten jetzt möglich Anpassung an der RezeptCreation GUI: Bearbeiten und Abbrechen Button entfernt

--- a/FMAApp/AllWindows/RecipeCreationWindow.xaml
+++ b/FMAApp/AllWindows/RecipeCreationWindow.xaml
@@ -32,7 +32,7 @@
         <Label Grid.Column="1" Grid.Row="0" FontSize="38" Content="Rezept" 
                HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-        <ListBox Grid.Row="1" Grid.Column="1" BorderBrush="#BABFD7" 
+        <ListBox Name="IngredientCollection" Grid.Row="1" Grid.Column="1" BorderBrush="#BABFD7" 
                  BorderThickness="2" Grid.RowSpan="8" ItemsSource="{Binding Path=ingList}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -56,23 +56,10 @@
             </Button.Background>
         </Button>
 
-        <Button Name="BearbeitenZutatBtn" Content="Zutat Bearbeiten" FontSize="28" 
-                Grid.Column="3" Grid.Row="3" Grid.ColumnSpan="3" Click="BearbeitenZutatBtn_Click">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="5"/>
-                </Style>
-            </Button.Resources>
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#8E9AAF"/>
-                    <GradientStop Color="#757F91" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
+       
 
         <Button Name="LoescheZutatBtn" Content="Zutat Löschen" FontSize="28" 
-                Grid.Column="3" Grid.Row="5" Grid.ColumnSpan="3">
+                Grid.Column="3" Grid.Row="3" Grid.ColumnSpan="3" Click="LoescheZutatBtn_Click">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="5"/>
@@ -86,8 +73,8 @@
             </Button.Background>
         </Button>
 
-        <Button Name="RezeptSpeichenBtn" Content="Speichern &amp; Zurück" FontSize="12" 
-                Grid.Column="3" Grid.Row="7" Grid.ColumnSpan="1" Click="RezeptSpeichenBtn_Click">
+        <Button Name="RezeptSpeichenBtn" Content="Speichern &amp; Zurück" FontSize="28" 
+                Grid.Column="3" Grid.Row="5" Grid.ColumnSpan="3" Click="RezeptSpeichenBtn_Click">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="5"/>
@@ -101,19 +88,5 @@
             </Button.Background>
         </Button>
 
-        <Button Name="AbbrechenBtn" Content="Abbrechen" FontSize="12" Grid.Column="5" 
-                Grid.Row="7" Grid.ColumnSpan="1" Click="AbbrechenBtn_Click">
-            <Button.Resources>
-                <Style TargetType="Border">
-                    <Setter Property="CornerRadius" Value="5"/>
-                </Style>
-            </Button.Resources>
-            <Button.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#8E9AAF"/>
-                    <GradientStop Color="#757F91" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Background>
-        </Button>
     </Grid>
 </Window>
