--- a/FMAApp/AllWindows/NewIngredientWindow.xaml
+++ b/FMAApp/AllWindows/NewIngredientWindow.xaml
@@ -26,10 +26,17 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="1" Content="Name der Zutat"></Label>
-        <TextBox Name="ingredientNameTextBox" Grid.ColumnSpan="3" Grid.Row="2" Grid.Column="1" />
 
-        <Label Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" Content="Menge der Zutat"></Label>
-        <Slider Name="amountSlider" Grid.Row="5" Grid.Column="1"  Grid.ColumnSpan="3" Maximum="10" Minimum="1" SmallChange="1" Value="1" TickPlacement="Both" />
+        <ComboBox Name="IngredientPicker" Grid.ColumnSpan="3" Grid.Row="2" Grid.Column="1" ItemsSource="{Binding cardridges}" Text="Select Option">
+
+        </ComboBox>
+        
+        <TextBox Name="ingredientNameTextBox" Grid.ColumnSpan="3" Grid.Row="3" Grid.Column="1" />
+
+        <Label Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Content="Menge der Zutat"></Label>
+        <Slider Name="amountSlider" Grid.Row="5" Grid.Column="1"  Grid.ColumnSpan="3" Maximum="10" Minimum="1" SmallChange="1" Value="1" TickPlacement="Both" Ticks="1,2,3,4,5,6,7,8,9,10" AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0"/>
+
+
 
         <Button x:Name="CancelBtn" Content="Abbrechen" Grid.Row="6" Grid.Column="1" Margin="4,4,4,4" Click="CancelBtn_Click">
             <Button.Resources>
