--- a/FMAApp/MainWindow.xaml
+++ b/FMAApp/MainWindow.xaml
@@ -36,7 +36,7 @@
         </Border>
 
         <TabControl Grid.Row="1" Grid.RowSpan="9" Grid.Column="1">
-            <TabItem Header="Rezepte" Name="recepieTabItem">
+            <TabItem Header="Rezepte" Name="recepieTabItem" >
                 <ListBox Name="RezeptCollection" Grid.Column="1" ItemsSource="{Binding Path=rezepte}" Grid.Row="1" Grid.RowSpan="9" BorderBrush="#BABFD7" BorderThickness="2">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -46,9 +46,108 @@
                 </ListBox>
             </TabItem>
             <TabItem Header="Cardridges" Name="cardridgeTabItem">
-                <TextBlock>
-                    Test
-                </TextBlock>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <GroupBox Grid.Row="0" Grid.Column="0" Header="Zutaten" Margin="10,5,10,5">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="10*"/>
+                                <ColumnDefinition Width="10*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                            </Grid.RowDefinitions>
+
+                            <!--#region -->
+                            <GroupBox Header="Box 1" Grid.Row="0" Grid.Column="0" Margin="1,1,1,1" >
+                                <TextBox x:Name="box1Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+
+                            <GroupBox Header="Box 2" Grid.Row="0" Grid.Column="1" Margin="1,1,1,1" >
+                                <TextBox x:Name="box2Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+
+                            <GroupBox Header="Box 3" Grid.Row="1" Grid.Column="0" Margin="1,1,1,1">
+                                <TextBox x:Name="box3Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+
+                            <GroupBox Header="Box 4" Grid.Row="1" Grid.Column="1" Margin="1,1,1,1">
+                                <TextBox x:Name="box4Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+
+                            <GroupBox Header="Box 5" Grid.Row="2" Grid.Column="0" Margin="1,1,1,1">
+                                <TextBox x:Name="box5Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+
+                            <GroupBox Header="Box 6" Grid.Row="2" Grid.Column="1" Margin="1,1,1,1">
+                                <TextBox x:Name="box6Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+
+                            <GroupBox Header="Box 7" Grid.Row="3" Grid.Column="0" Margin="1,1,1,1">
+                                <TextBox x:Name="box7Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+
+                            <GroupBox Header="Box 8" Grid.Row="3" Grid.Column="1" Margin="1,1,1,1">
+                                <TextBox x:Name="box8Content" Margin="1,10,1,10" FontSize="12"/>
+                            </GroupBox>
+                            <!--#endregion-->
+                        </Grid>
+                    </GroupBox>
+
+                    <GroupBox Grid.Row="1" Grid.Column="0" Header="Pimmel" Margin="10,5,10,5">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
+                                <RowDefinition Height="1*"/>
+                            </Grid.RowDefinitions>
+                            
+                            <Button Grid.Column="0" Grid.Row="0" Margin="10,10,10,10" Name="applyContainerButton" Content="Anwenden" Click="applyContainerButton_Click">
+                                <Button.Resources>
+                                    <Style TargetType="Border">
+                                        <Setter Property="CornerRadius" Value="5"/>
+                                    </Style>
+                                </Button.Resources>
+                                <Button.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#8E9AAF"/>
+                                        <GradientStop Color="#757F91" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Button.Background>
+                            </Button>
+
+                            <Button Grid.Column="1" Grid.Row="0" Margin="10,10,10,10" Name="deleteContainerButton" Content="Alles Löschen">
+                                <Button.Resources>
+                                    <Style TargetType="Border">
+                                        <Setter Property="CornerRadius" Value="5"/>
+                                    </Style>
+                                </Button.Resources>
+                                <Button.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#8E9AAF"/>
+                                        <GradientStop Color="#757F91" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Button.Background>
+                            </Button>
+                        </Grid>
+                    </GroupBox>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Optionen" Name="optionTabItem">
+                
             </TabItem>
         </TabControl>
 
@@ -124,6 +223,7 @@
 
         <Label HorizontalAlignment="Center" Grid.Row="11" Grid.Column="5">
             <TextBlock>A NetDocs Jr<LineBreak/>Production</TextBlock>
-        </Label>  
+        </Label>
+       
     </Grid>
 </Window>
